[package]
name = "acuity-runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive"] }
pallet-content = { git = "https://github.com/acuity-network/pallet-content", branch = "master", default-features = false }
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3", default-features = false, features = [
    "runtime",
    "cumulus-primitives-core",
    "pallet-aura",
    "pallet-balances",
    "pallet-sudo",
    "pallet-timestamp",
    "pallet-transaction-payment",
    "pallet-transaction-payment-rpc-runtime-api",
    "sp-consensus-aura",
    "sp-keyring",
    "staging-parachain-info",
] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = ["alloc"] }

[build-dependencies]
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3", default-features = false, features = ["substrate-wasm-builder"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "pallet-content/std",
    "polkadot-sdk/std",
    "scale-info/std",
    "serde_json/std",
]
