[package]
name = "acuity-runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603", default-features = false }
pallet-account-content = { git = "https://github.com/acuity-network/pallet-content", branch = "polkadot-stable2603", default-features = false }
pallet-account-profile = { git = "https://github.com/acuity-network/pallet-content", branch = "polkadot-stable2603", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603", default-features = false }
pallet-content = { git = "https://github.com/acuity-network/pallet-content", branch = "polkadot-stable2603", default-features = false }
pallet-content-reactions = { git = "https://github.com/acuity-network/pallet-content", branch = "polkadot-stable2603", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603", default-features = false }
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603", default-features = false, features = [
    "runtime",
    "cumulus-primitives-core",
    "pallet-aura",
    "pallet-balances",
    "pallet-sudo",
    "pallet-timestamp",
    "pallet-transaction-payment",
    "pallet-transaction-payment-rpc-runtime-api",
    "pallet-utility",
    "sp-consensus-aura",
    "sp-keyring",
    "staging-parachain-info",
] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = ["alloc"] }

[build-dependencies]
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603", default-features = false, features = ["substrate-wasm-builder"] }

[patch.crates-io]
core2 = { git = "https://github.com/bbqsrc/core2", rev = "545e84bcb0f235b12e21351e0c69767958efe2a7" }

[features]
default = ["std"]
runtime-benchmarks = [
    "pallet-account-content/runtime-benchmarks",
    "pallet-account-profile/runtime-benchmarks",
    "pallet-content/runtime-benchmarks",
    "pallet-content-reactions/runtime-benchmarks",
    "polkadot-sdk/runtime-benchmarks",
]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-account-content/std",
    "pallet-account-profile/std",
    "pallet-balances/std",
    "pallet-content/std",
    "pallet-content-reactions/std",
    "pallet-utility/std",
    "polkadot-sdk/std",
    "scale-info/std",
    "serde_json/std",
]
